--- a/bg/video/3G2.bg.md
+++ b/bg/video/3G2.bg.md
@@ -16,7 +16,7 @@ lastmod: 2020-04-12
 
 ## Какво е 3G2 файл? ##
 
-3G2 (файлов формат 3GPP2) е формат на мултимедиен контейнер, подобен на файловия формат [3GP](/bg/video/3gp). 3G2 е дефиниран от проекта за партньорство от трето поколение 2 (3GPP2) за 3G CDMA2000 мултимедийни услуги. 3G2 файловете се съхраняват с разширение .3g2. В сравнение с 3GP файловете, 3G2 файловете консумират по-малко място и честотна лента.
+3G2 (файлов формат 3GPP2) е формат на мултимедиен контейнер, подобен на файловия формат [3GP](/bg/video/3gp/). 3G2 е дефиниран от проекта за партньорство от трето поколение 2 (3GPP2) за 3G CDMA2000 мултимедийни услуги. 3G2 файловете се съхраняват с разширение .3g2. В сравнение с 3GP файловете, 3G2 файловете консумират по-малко място и честотна лента.
 
 ## Технически подробности ##
 
