--- a/cs/video/3G2.cs.md
+++ b/cs/video/3G2.cs.md
@@ -16,7 +16,7 @@ lastmod: 2020-04-12
 
 ## Co je soubor 3G2? ##
 
-3G2 (formát souboru 3GPP2) je formát multimediálního kontejneru podobný formátu souboru [3GP](/cs/video/3gp). 3G2 je definován projektem partnerství třetí generace 2 (3GPP2) pro multimediální služby 3G CDMA2000. Soubory 3G2 jsou uloženy s příponou .3g2. Ve srovnání se soubory 3GP spotřebovávají soubory 3G2 méně místa a šířky pásma.
+3G2 (formát souboru 3GPP2) je formát multimediálního kontejneru podobný formátu souboru [3GP](/cs/video/3gp/). 3G2 je definován projektem partnerství třetí generace 2 (3GPP2) pro multimediální služby 3G CDMA2000. Soubory 3G2 jsou uloženy s příponou .3g2. Ve srovnání se soubory 3GP spotřebovávají soubory 3G2 méně místa a šířky pásma.
 
 ## Technické údaje ##
 
