--- a/de/video/3G2.de.md
+++ b/de/video/3G2.de.md
@@ -16,7 +16,7 @@ lastmod: 2020-04-12
 
 ## Was ist eine 3G2-Datei? ##
 
-3G2 (3GPP2-Dateiformat) ist ein Multimedia-Containerformat ähnlich dem [3GP](/de/video/3gp)-Dateiformat. 3G2 wird vom Third Generation Partnership Project 2 (3GPP2) für 3G-CDMA2000-Multimediadienste definiert. 3G2-Dateien werden mit der Erweiterung .3g2 gespeichert. Im Vergleich zu 3GP-Dateien verbrauchen 3G2-Dateien weniger Speicherplatz und Bandbreite.
+3G2 (3GPP2-Dateiformat) ist ein Multimedia-Containerformat ähnlich dem [3GP](/de/video/3gp/)-Dateiformat. 3G2 wird vom Third Generation Partnership Project 2 (3GPP2) für 3G-CDMA2000-Multimediadienste definiert. 3G2-Dateien werden mit der Erweiterung .3g2 gespeichert. Im Vergleich zu 3GP-Dateien verbrauchen 3G2-Dateien weniger Speicherplatz und Bandbreite.
 
 ## Technische Details ##
 
