--- a/el/video/3G2.el.md
+++ b/el/video/3G2.el.md
@@ -16,7 +16,7 @@ lastmod: 2020-04-12
 
 ## Τι είναι ένα αρχείο 3G2; ##
 
-Το 3G2 (μορφή αρχείου 3GPP2) είναι μια μορφή κοντέινερ πολυμέσων παρόμοια με τη μορφή αρχείου [3GP](/el/video/3gp). Το 3G2 ορίζεται από το Third Generation Partnership Project 2 (3GPP2) για υπηρεσίες πολυμέσων 3G CDMA2000. Τα αρχεία 3G2 αποθηκεύονται με την επέκταση .3g2. Σε σύγκριση με τα αρχεία 3GP, τα αρχεία 3G2 καταναλώνουν λιγότερο χώρο και εύρος ζώνης.
+Το 3G2 (μορφή αρχείου 3GPP2) είναι μια μορφή κοντέινερ πολυμέσων παρόμοια με τη μορφή αρχείου [3GP](/el/video/3gp/). Το 3G2 ορίζεται από το Third Generation Partnership Project 2 (3GPP2) για υπηρεσίες πολυμέσων 3G CDMA2000. Τα αρχεία 3G2 αποθηκεύονται με την επέκταση .3g2. Σε σύγκριση με τα αρχεία 3GP, τα αρχεία 3G2 καταναλώνουν λιγότερο χώρο και εύρος ζώνης.
 
 ## Τεχνικές λεπτομέρειες ##
 
