--- a/en/video/3G2.md
+++ b/en/video/3G2.md
@@ -16,7 +16,7 @@ lastmod: 2020-04-12
 
 ## What is a 3G2 file? ##
 
-3G2(3GPP2 file format) is a multimedia container format similar to the [3GP](/video/3gp) file format. 3G2 is defined by the Third Generation Partnership Project 2 (3GPP2) for 3G CDMA2000 multimedia services. 3G2 files are stored with the .3g2 extension. As compared to 3GP files, 3G2 files consume less space and bandwidth.
+3G2(3GPP2 file format) is a multimedia container format similar to the [3GP](/video/3gp/) file format. 3G2 is defined by the Third Generation Partnership Project 2 (3GPP2) for 3G CDMA2000 multimedia services. 3G2 files are stored with the .3g2 extension. As compared to 3GP files, 3G2 files consume less space and bandwidth.
 
 ## Technical Details ##
 
