--- a/es/video/3G2.es.md
+++ b/es/video/3G2.es.md
@@ -16,7 +16,7 @@ lastmod: 2020-04-12
 
 ## ¿Qué es un archivo 3G2? ##
 
-3G2 (formato de archivo 3GPP2) es un formato contenedor multimedia similar al formato de archivo [3GP](/es/video/3gp). 3G2 está definido por el Proyecto de Asociación de Tercera Generación 2 (3GPP2) para servicios multimedia 3G CDMA2000. Los archivos 3G2 se almacenan con la extensión .3g2. En comparación con los archivos 3GP, los archivos 3G2 consumen menos espacio y ancho de banda.
+3G2 (formato de archivo 3GPP2) es un formato contenedor multimedia similar al formato de archivo [3GP](/es/video/3gp/). 3G2 está definido por el Proyecto de Asociación de Tercera Generación 2 (3GPP2) para servicios multimedia 3G CDMA2000. Los archivos 3G2 se almacenan con la extensión .3g2. En comparación con los archivos 3GP, los archivos 3G2 consumen menos espacio y ancho de banda.
 
 ## Detalles técnicos ##
 
