--- a/fr/video/3G2.fr.md
+++ b/fr/video/3G2.fr.md
@@ -16,7 +16,7 @@ lastmod: 2020-04-12
 
 ## Qu'est-ce qu'un fichier 3G2 ? ##
 
-3G2 (format de fichier 3GPP2) est un format de conteneur multimédia similaire au format de fichier [3GP](/fr/video/3gp). 3G2 est défini par le projet de partenariat de troisième génération 2 (3GPP2) pour les services multimédias 3G CDMA2000. Les fichiers 3G2 sont stockés avec l'extension .3g2. Par rapport aux fichiers 3GP, les fichiers 3G2 consomment moins d'espace et de bande passante.
+3G2 (format de fichier 3GPP2) est un format de conteneur multimédia similaire au format de fichier [3GP](/fr/video/3gp/). 3G2 est défini par le projet de partenariat de troisième génération 2 (3GPP2) pour les services multimédias 3G CDMA2000. Les fichiers 3G2 sont stockés avec l'extension .3g2. Par rapport aux fichiers 3GP, les fichiers 3G2 consomment moins d'espace et de bande passante.
 
 ## Détails techniques ##
 
