--- a/he/video/3G2.he.md
+++ b/he/video/3G2.he.md
@@ -16,7 +16,7 @@ lastmod: 2020-04-12
 
 ## מהו קובץ 3G2? ##
 
-3G2(פורמט קובץ 3GPP2) הוא פורמט מכיל מולטימדיה הדומה לפורמט הקובץ [3GP](/he/video/3gp). 3G2 מוגדר על ידי פרויקט שותפות 2 של הדור השלישי (3GPP2) עבור שירותי מולטימדיה 3G CDMA2000. קבצי 3G2 מאוחסנים עם סיומת .3g2. בהשוואה לקבצי 3GP, קבצי 3G2 צורכים פחות מקום ורוחב פס.
+3G2(פורמט קובץ 3GPP2) הוא פורמט מכיל מולטימדיה הדומה לפורמט הקובץ [3GP](/he/video/3gp/). 3G2 מוגדר על ידי פרויקט שותפות 2 של הדור השלישי (3GPP2) עבור שירותי מולטימדיה 3G CDMA2000. קבצי 3G2 מאוחסנים עם סיומת .3g2. בהשוואה לקבצי 3GP, קבצי 3G2 צורכים פחות מקום ורוחב פס.
 
 ## פרטים טכניים ##
 
