--- a/hi/video/3G2.hi.md
+++ b/hi/video/3G2.hi.md
@@ -16,7 +16,7 @@ lastmod: 2020-04-12
 
 ## 3G2 फ़ाइल क्या है? ##
 
-3G2(3GPP2 फ़ाइल स्वरूप) [3GP](/hi/video/3gp) फ़ाइल स्वरूप के समान एक मल्टीमीडिया कंटेनर स्वरूप है। 3G2 को 3G CDMA2000 मल्टीमीडिया सेवाओं के लिए थर्ड जनरेशन पार्टनरशिप प्रोजेक्ट 2 (3GPP2) द्वारा परिभाषित किया गया है। 3G2 फ़ाइलें .3g2 एक्सटेंशन के साथ संग्रहीत की जाती हैं। 3GP फाइलों की तुलना में, 3G2 फाइलें कम जगह और बैंडविड्थ की खपत करती हैं।
+3G2(3GPP2 फ़ाइल स्वरूप) [3GP](/hi/video/3gp/) फ़ाइल स्वरूप के समान एक मल्टीमीडिया कंटेनर स्वरूप है। 3G2 को 3G CDMA2000 मल्टीमीडिया सेवाओं के लिए थर्ड जनरेशन पार्टनरशिप प्रोजेक्ट 2 (3GPP2) द्वारा परिभाषित किया गया है। 3G2 फ़ाइलें .3g2 एक्सटेंशन के साथ संग्रहीत की जाती हैं। 3GP फाइलों की तुलना में, 3G2 फाइलें कम जगह और बैंडविड्थ की खपत करती हैं।
 
 ## तकनीकी जानकारी ##
 
