--- a/hu/video/3G2.hu.md
+++ b/hu/video/3G2.hu.md
@@ -16,7 +16,7 @@ lastmod: 2020-04-12
 
 ## Mi az a 3G2 fájl? ##
 
-A 3G2 (3GPP2 fájlformátum) a [3GP](/hu/video/3gp) fájlformátumhoz hasonló multimédiás tárolóformátum. A 3G2-t a Third Generation Partnership Project 2 (3GPP2) határozza meg a 3G CDMA2000 multimédiás szolgáltatásokhoz. A 3G2 fájlok tárolása .3g2 kiterjesztéssel történik. A 3GP-fájlokhoz képest a 3G2-fájlok kevesebb helyet és sávszélességet fogyasztanak.
+A 3G2 (3GPP2 fájlformátum) a [3GP](/hu/video/3gp/) fájlformátumhoz hasonló multimédiás tárolóformátum. A 3G2-t a Third Generation Partnership Project 2 (3GPP2) határozza meg a 3G CDMA2000 multimédiás szolgáltatásokhoz. A 3G2 fájlok tárolása .3g2 kiterjesztéssel történik. A 3GP-fájlokhoz képest a 3G2-fájlok kevesebb helyet és sávszélességet fogyasztanak.
 
 ## Műszaki információk ##
 
