--- a/id/video/3G2.id.md
+++ b/id/video/3G2.id.md
@@ -16,7 +16,7 @@ lastmod: 2020-04-12
 
 ## Apa itu berkas 3G2? ##
 
-3G2(format file 3GPP2) adalah format wadah multimedia yang serupa dengan format file [3GP](/id/video/3gp). 3G2 didefinisikan oleh Proyek Kemitraan Generasi Ketiga 2 (3GPP2) untuk layanan multimedia 3G CDMA2000. File 3G2 disimpan dengan ekstensi .3g2. Dibandingkan dengan file 3GP, file 3G2 mengkonsumsi lebih sedikit ruang dan bandwidth.
+3G2(format file 3GPP2) adalah format wadah multimedia yang serupa dengan format file [3GP](/id/video/3gp/). 3G2 didefinisikan oleh Proyek Kemitraan Generasi Ketiga 2 (3GPP2) untuk layanan multimedia 3G CDMA2000. File 3G2 disimpan dengan ekstensi .3g2. Dibandingkan dengan file 3GP, file 3G2 mengkonsumsi lebih sedikit ruang dan bandwidth.
 
 ## Detail Teknis ##
 
