--- a/it/video/3G2.it.md
+++ b/it/video/3G2.it.md
@@ -16,7 +16,7 @@ lastmod: 2020-04-12
 
 ## Che cos'è un file 3G2? ##
 
-3G2 (formato file 3GPP2) è un formato contenitore multimediale simile al formato file [3GP](/it/video/3gp). 3G2 è definito dal Third Generation Partnership Project 2 (3GPP2) per i servizi multimediali 3G CDMA2000. I file 3G2 vengono archiviati con l'estensione .3g2. Rispetto ai file 3GP, i file 3G2 consumano meno spazio e larghezza di banda.
+3G2 (formato file 3GPP2) è un formato contenitore multimediale simile al formato file [3GP](/it/video/3gp/). 3G2 è definito dal Third Generation Partnership Project 2 (3GPP2) per i servizi multimediali 3G CDMA2000. I file 3G2 vengono archiviati con l'estensione .3g2. Rispetto ai file 3GP, i file 3G2 consumano meno spazio e larghezza di banda.
 
 ## Dettagli tecnici ##
 
