--- a/ja/video/3G2.ja.md
+++ b/ja/video/3G2.ja.md
@@ -16,7 +16,7 @@ lastmod: 2020-04-12
 
 ## 3G2ファイルとは？ ##
 
-3G2 (3GPP2 ファイル形式) は、[3GP](/video/3gp) ファイル形式と同様のマルチメディア コンテナー形式です。 3G2 は、3G CDMA2000 マルチメディア サービスのために、Third Generation Partnership Project 2 (3GPP2) によって定義されています。 3G2 ファイルは .3g2 拡張子で保存されます。 3GP ファイルと比較して、3G2 ファイルはより少ないスペースと帯域幅を消費します。
+3G2 (3GPP2 ファイル形式) は、[3GP](/video/3gp/) ファイル形式と同様のマルチメディア コンテナー形式です。 3G2 は、3G CDMA2000 マルチメディア サービスのために、Third Generation Partnership Project 2 (3GPP2) によって定義されています。 3G2 ファイルは .3g2 拡張子で保存されます。 3GP ファイルと比較して、3G2 ファイルはより少ないスペースと帯域幅を消費します。
 
 ## 技術的な詳細 ##
 
