--- a/ko/video/3G2.ko.md
+++ b/ko/video/3G2.ko.md
@@ -16,7 +16,7 @@ lastmod: 2020-04-12
 
 ## 3G2 파일이란? ##
 
-3G2(3GPP2 파일 형식)는 [3GP](/ko/video/3gp) 파일 형식과 유사한 멀티미디어 컨테이너 형식입니다. 3G2는 3G CDMA2000 멀티미디어 서비스를 위한 3GPP2(3세대 파트너십 프로젝트 2)에 의해 정의됩니다. 3G2 파일은 .3g2 확장자로 저장됩니다. 3GP 파일에 비해 3G2 파일은 공간과 대역폭을 덜 사용합니다.
+3G2(3GPP2 파일 형식)는 [3GP](/ko/video/3gp/) 파일 형식과 유사한 멀티미디어 컨테이너 형식입니다. 3G2는 3G CDMA2000 멀티미디어 서비스를 위한 3GPP2(3세대 파트너십 프로젝트 2)에 의해 정의됩니다. 3G2 파일은 .3g2 확장자로 저장됩니다. 3GP 파일에 비해 3G2 파일은 공간과 대역폭을 덜 사용합니다.
 
 ## 기술적 세부 사항 ##
 
