--- a/nl/video/3G2.nl.md
+++ b/nl/video/3G2.nl.md
@@ -16,7 +16,7 @@ lastmod: 2020-04-12
 
 ## Wat is een 3G2-bestand? ##
 
-3G2(3GPP2-bestandsindeling) is een multimediacontainerindeling die lijkt op de [3GP](/nl/video/3gp)-bestandsindeling. 3G2 wordt gedefinieerd door het Third Generation Partnership Project 2 (3GPP2) voor 3G CDMA2000 multimediadiensten. 3G2-bestanden worden opgeslagen met de .3g2-extensie. In vergelijking met 3GP-bestanden verbruiken 3G2-bestanden minder ruimte en bandbreedte.
+3G2(3GPP2-bestandsindeling) is een multimediacontainerindeling die lijkt op de [3GP](/nl/video/3gp/)-bestandsindeling. 3G2 wordt gedefinieerd door het Third Generation Partnership Project 2 (3GPP2) voor 3G CDMA2000 multimediadiensten. 3G2-bestanden worden opgeslagen met de .3g2-extensie. In vergelijking met 3GP-bestanden verbruiken 3G2-bestanden minder ruimte en bandbreedte.
 
 ## Technische details ##
 
