--- a/pl/video/3G2.pl.md
+++ b/pl/video/3G2.pl.md
@@ -16,7 +16,7 @@ lastmod: 2020-04-12
 
 ## Co to jest plik 3G2? ##
 
-3G2 (format pliku 3GPP2) to format kontenera multimediów podobny do formatu pliku [3GP](/pl/video/3gp). 3G2 jest zdefiniowany przez projekt partnerski trzeciej generacji 2 (3GPP2) dla usług multimedialnych 3G CDMA2000. Pliki 3G2 są przechowywane z rozszerzeniem .3g2. W porównaniu z plikami 3GP, pliki 3G2 zajmują mniej miejsca i przepustowości.
+3G2 (format pliku 3GPP2) to format kontenera multimediów podobny do formatu pliku [3GP](/pl/video/3gp/). 3G2 jest zdefiniowany przez projekt partnerski trzeciej generacji 2 (3GPP2) dla usług multimedialnych 3G CDMA2000. Pliki 3G2 są przechowywane z rozszerzeniem .3g2. W porównaniu z plikami 3GP, pliki 3G2 zajmują mniej miejsca i przepustowości.
 
 ## Szczegóły techniczne ##
 
