--- a/pt/video/3G2.pt.md
+++ b/pt/video/3G2.pt.md
@@ -16,7 +16,7 @@ lastmod: 2020-04-12
 
 ## O que é um arquivo 3G2? ##
 
-3G2 (formato de arquivo 3GPP2) é um formato de contêiner multimídia semelhante ao formato de arquivo [3GP](/pt/video/3gp). 3G2 é definido pelo Projeto de Parceria de Terceira Geração 2 (3GPP2) para serviços multimídia 3G CDMA2000. Os arquivos 3G2 são armazenados com a extensão .3g2. Em comparação com os arquivos 3GP, os arquivos 3G2 consomem menos espaço e largura de banda.
+3G2 (formato de arquivo 3GPP2) é um formato de contêiner multimídia semelhante ao formato de arquivo [3GP](/pt/video/3gp/). 3G2 é definido pelo Projeto de Parceria de Terceira Geração 2 (3GPP2) para serviços multimídia 3G CDMA2000. Os arquivos 3G2 são armazenados com a extensão .3g2. Em comparação com os arquivos 3GP, os arquivos 3G2 consomem menos espaço e largura de banda.
 
 ## Detalhes técnicos ##
 
