--- a/ro/video/3G2.ro.md
+++ b/ro/video/3G2.ro.md
@@ -16,7 +16,7 @@ lastmod: 2020-04-12
 
 ## Ce este un fișier 3G2? ##
 
-3G2(3GPP2 file format) este un format de container multimedia similar cu formatul de fișier [3GP](/ro/video/3gp). 3G2 este definit de Third Generation Partnership Project 2 (3GPP2) pentru serviciile multimedia 3G CDMA2000. Fișierele 3G2 sunt stocate cu extensia .3g2. În comparație cu fișierele 3GP, fișierele 3G2 consumă mai puțin spațiu și lățime de bandă.
+3G2(3GPP2 file format) este un format de container multimedia similar cu formatul de fișier [3GP](/ro/video/3gp/). 3G2 este definit de Third Generation Partnership Project 2 (3GPP2) pentru serviciile multimedia 3G CDMA2000. Fișierele 3G2 sunt stocate cu extensia .3g2. În comparație cu fișierele 3GP, fișierele 3G2 consumă mai puțin spațiu și lățime de bandă.
 
 ## Detalii tehnice ##
 
