--- a/ru/video/3G2.ru.md
+++ b/ru/video/3G2.ru.md
@@ -16,7 +16,7 @@ lastmod: 2020-04-12
 
 ## .3G2 вариант № ##
 
-3G2 (формат файла 3GPP2) — это формат мультимедийного контейнера, аналогичный формату файла [3GP](/ru/video/3gp). 3G2 определяется Проектом партнерства третьего поколения 2 (3GPP2) для мультимедийных услуг 3G CDMA2000. Файлы 3G2 хранятся с расширением .3g2. По сравнению с файлами 3GP файлы 3G2 занимают меньше места и меньше пропускной способности.
+3G2 (формат файла 3GPP2) — это формат мультимедийного контейнера, аналогичный формату файла [3GP](/ru/video/3gp/). 3G2 определяется Проектом партнерства третьего поколения 2 (3GPP2) для мультимедийных услуг 3G CDMA2000. Файлы 3G2 хранятся с расширением .3g2. По сравнению с файлами 3GP файлы 3G2 занимают меньше места и меньше пропускной способности.
 
 ## Технические подробности ##
 
