--- a/sv/video/3G2.sv.md
+++ b/sv/video/3G2.sv.md
@@ -16,7 +16,7 @@ lastmod: 2020-04-12
 
 ## Vad är en 3G2 fil? ##
 
-3G2(3GPP2-filformat) är ett multimediaformat som liknar filformatet [3GP](/sv/video/3gp). 3G2 definieras av Third Generation Partnership Project 2 (3GPP2) för 3G CDMA2000 multimediatjänster. 3G2-filer lagras med tillägget .3g2. Jämfört med 3GP-filer förbrukar 3G2-filer mindre utrymme och bandbredd.
+3G2(3GPP2-filformat) är ett multimediaformat som liknar filformatet [3GP](/sv/video/3gp/). 3G2 definieras av Third Generation Partnership Project 2 (3GPP2) för 3G CDMA2000 multimediatjänster. 3G2-filer lagras med tillägget .3g2. Jämfört med 3GP-filer förbrukar 3G2-filer mindre utrymme och bandbredd.
 
 ## Tekniska detaljer ##
 
