--- a/th/video/3G2.th.md
+++ b/th/video/3G2.th.md
@@ -16,7 +16,7 @@ lastmod: 2020-04-12
 
 ## ไฟล์ 3G2 คืออะไร?? ##
 
-3G2(รูปแบบไฟล์ 3GPP2) เป็นรูปแบบคอนเทนเนอร์มัลติมีเดียที่คล้ายกับรูปแบบไฟล์ [3GP](/th/วิดีโอ/3gp) 3G2 ถูกกำหนดโดย Third Generation Partnership Project 2 (3GPP2) สำหรับบริการมัลติมีเดีย 3G CDMA2000 ไฟล์ 3G2 ถูกจัดเก็บด้วยนามสกุล .3g2 เมื่อเทียบกับไฟล์ 3GP ไฟล์ 3G2 ใช้พื้นที่และแบนด์วิธน้อยกว่า
+3G2(รูปแบบไฟล์ 3GPP2) เป็นรูปแบบคอนเทนเนอร์มัลติมีเดียที่คล้ายกับรูปแบบไฟล์ [3GP](/th/video/3gp/) 3G2 ถูกกำหนดโดย Third Generation Partnership Project 2 (3GPP2) สำหรับบริการมัลติมีเดีย 3G CDMA2000 ไฟล์ 3G2 ถูกจัดเก็บด้วยนามสกุล .3g2 เมื่อเทียบกับไฟล์ 3GP ไฟล์ 3G2 ใช้พื้นที่และแบนด์วิธน้อยกว่า
 
 ## รายละเอียดทางเทคนิค ##
 
