--- a/tr/video/3G2.tr.md
+++ b/tr/video/3G2.tr.md
@@ -16,7 +16,7 @@ lastmod: 2020-04-12
 
 ## 3G2 dosyası nedir? ##
 
-3G2(3GPP2 dosya formatı), [3GP](/tr/video/3gp) dosya formatına benzer bir multimedya taşıyıcı formatıdır. 3G2, 3G CDMA2000 multimedya hizmetleri için Üçüncü Nesil Ortaklık Projesi 2 (3GPP2) tarafından tanımlanır. 3G2 dosyaları .3g2 uzantısıyla depolanır. 3GP dosyalarıyla karşılaştırıldığında, 3G2 dosyaları daha az alan ve bant genişliği kullanır.
+3G2(3GPP2 dosya formatı), [3GP](/tr/video/3gp/) dosya formatına benzer bir multimedya taşıyıcı formatıdır. 3G2, 3G CDMA2000 multimedya hizmetleri için Üçüncü Nesil Ortaklık Projesi 2 (3GPP2) tarafından tanımlanır. 3G2 dosyaları .3g2 uzantısıyla depolanır. 3GP dosyalarıyla karşılaştırıldığında, 3G2 dosyaları daha az alan ve bant genişliği kullanır.
 
 ## Teknik detaylar ##
 
