--- a/uk/video/3G2.uk.md
+++ b/uk/video/3G2.uk.md
@@ -16,7 +16,7 @@ lastmod: 2020-04-12
 
 ## Що таке файл 3G2? ##
 
-3G2 (формат файлу 3GPP2) — це формат мультимедійного контейнера, схожий на формат файлу [3GP](/uk/video/3gp). 3G2 визначається Проектом партнерства третього покоління 2 (3GPP2) для мультимедійних послуг 3G CDMA2000. Файли 3G2 зберігаються з розширенням .3g2. Порівняно з файлами 3GP файли 3G2 споживають менше місця та пропускної здатності.
+3G2 (формат файлу 3GPP2) — це формат мультимедійного контейнера, схожий на формат файлу [3GP](/uk/video/3gp/). 3G2 визначається Проектом партнерства третього покоління 2 (3GPP2) для мультимедійних послуг 3G CDMA2000. Файли 3G2 зберігаються з розширенням .3g2. Порівняно з файлами 3GP файли 3G2 споживають менше місця та пропускної здатності.
 
 ## Технічні деталі ##
 
