--- a/vi/video/3G2.vi.md
+++ b/vi/video/3G2.vi.md
@@ -16,7 +16,7 @@ lastmod: 2020-04-12
 
 ## Tệp 3G2 là gì? ##
 
-3G2(định dạng tệp 3GPP2) là định dạng bộ chứa đa phương tiện tương tự như định dạng tệp [3GP](/vi/video/3gp). 3G2 được xác định bởi Dự án Đối tác Thế hệ Thứ 2 (3GPP2) cho các dịch vụ đa phương tiện 3G CDMA2000. Các tệp 3G2 được lưu trữ với phần mở rộng .3g2. So với các tệp 3GP, các tệp 3G2 tiêu thụ ít dung lượng và băng thông hơn.
+3G2(định dạng tệp 3GPP2) là định dạng bộ chứa đa phương tiện tương tự như định dạng tệp [3GP](/vi/video/3gp/). 3G2 được xác định bởi Dự án Đối tác Thế hệ Thứ 2 (3GPP2) cho các dịch vụ đa phương tiện 3G CDMA2000. Các tệp 3G2 được lưu trữ với phần mở rộng .3g2. So với các tệp 3GP, các tệp 3G2 tiêu thụ ít dung lượng và băng thông hơn.
 
 ## Chi tiết kỹ thuật ##
 
