--- a/zh/video/3G2.zh.md
+++ b/zh/video/3G2.zh.md
@@ -16,7 +16,7 @@ lastmod: 2020-04-12
 
 ## 什么是 3G2 文件？ ##
 
-3G2（3GPP2 文件格式）是一种类似于 [3GP](/zh/video/3gp) 文件格式的多媒体容器格式。 3G2 由第三代合作伙伴计划 2 (3GPP2) 定义，用于 3G CDMA2000 多媒体服务。 3G2 文件以 .3g2 扩展名存储。与 3GP 文件相比，3G2 文件占用的空间和带宽更少。
+3G2（3GPP2 文件格式）是一种类似于 [3GP](/zh/video/3gp/) 文件格式的多媒体容器格式。 3G2 由第三代合作伙伴计划 2 (3GPP2) 定义，用于 3G CDMA2000 多媒体服务。 3G2 文件以 .3g2 扩展名存储。与 3GP 文件相比，3G2 文件占用的空间和带宽更少。
 
 ## 技术细节 ＃＃
 
