--- a/es/spreadsheet/12m.es.md
+++ b/es/spreadsheet/12m.es.md
@@ -28,6 +28,6 @@ Con el lanzamiento de Microsoft Excel, la popularidad de Lotus 1-2-3 se redujo s
 
 ## Referencias
 
-* [Loto 1-2-3](https://en.wikipedia.org/wiki/Loto_1-2-3)
+* [Loto 1-2-3](https://en.wikipedia.org/wiki/Lotus_1-2-3)
 * [Lotus 1-2-3 por ArchiveTeam](http://justsolve.archiveteam.org/wiki/Lotus_1-2-3)
 
