--- a/vi/spreadsheet/123.vi.md
+++ b/vi/spreadsheet/123.vi.md
@@ -80,6 +80,6 @@ Tệp bảng tính Lotus có thể có các loại bản ghi khác nhau. Chúng 
 
 ## Người giới thiệu
 
-* [Lotus 1-2-3](https://vi.wikipedia.org/wiki/Lotus_1-2-3)
+* [Lotus 1-2-3](https://en.wikipedia.org/wiki/Lotus_1-2-3)
 * [Lotus 1-2-3 của ArchiveTeam](http://justsolve.archiveteam.org/wiki/Lotus_1-2-3)
 
