--- a/vi/spreadsheet/12m.vi.md
+++ b/vi/spreadsheet/12m.vi.md
@@ -28,6 +28,6 @@ Với sự ra mắt của Microsoft Excel, mức độ phổ biến của Lotus 
 
 ## Người giới thiệu
 
-* [Lotus 1-2-3](https://vi.wikipedia.org/wiki/Lotus_1-2-3)
+* [Lotus 1-2-3](https://en.wikipedia.org/wiki/Lotus_1-2-3)
 * [Lotus 1-2-3 của ArchiveTeam](http://justsolve.archiveteam.org/wiki/Lotus_1-2-3)
 
