--- a/es/spreadsheet/123.es.md
+++ b/es/spreadsheet/123.es.md
@@ -80,6 +80,6 @@ Un archivo de hoja de cálculo de Lotus puede tener diferentes tipos de registro
 
 ## Referencias
 
-* [Loto 1-2-3](https://en.wikipedia.org/wiki/Loto_1-2-3)
+* [Loto 1-2-3](https://en.wikipedia.org/wiki/Lotus_1-2-3)
 * [Lotus 1-2-3 por ArchiveTeam](http://justsolve.archiveteam.org/wiki/Lotus_1-2-3)
 
