--- a/bg/compression/7Z.bg.md
+++ b/bg/compression/7Z.bg.md
@@ -35,7 +35,7 @@
 
 ## Спецификации на файловия формат 7z
 
-7z използва двоичен файлов формат за съхраняване на компресираните архиви. Разработването и внедряването на архиватора 7-ZIP публикува първото появяване на файловия формат 7z. Неговите спецификации на формата са достъпни като обикновен текстов формат в поддиректорията „Документи“ в хранилището на кодове на 7-ZIP, което е публично достъпно под [GNU Lesser General Public License](https://www.gnu.org/copyleft/ по-малко.html). LZMA е методът за компресиране по подразбиране, използван от 7z файлове.
+7z използва двоичен файлов формат за съхраняване на компресираните архиви. Разработването и внедряването на архиватора 7-ZIP публикува първото появяване на файловия формат 7z. Неговите спецификации на формата са достъпни като обикновен текстов формат в поддиректорията „Документи“ в хранилището на кодове на 7-ZIP, което е публично достъпно под [GNU Lesser General Public License](https://www.gnu.org/copyleft/lesser.html). LZMA е методът за компресиране по подразбиране, използван от 7z файлове.
 
 ### Подпис на файл
 
