--- a/cs/compression/7Z.cs.md
+++ b/cs/compression/7Z.cs.md
@@ -35,7 +35,7 @@
 
 ## Specifikace formátu souboru 7z
 
-7z používá binární formát souboru pro ukládání komprimovaných archivů. Vývoj a implementace archivátoru 7-ZIP publikoval první výskyt souborového formátu 7z. Specifikace jeho formátu jsou dostupné jako formát prostého textu v podadresáři „Docs“ v úložišti kódu 7-ZIP, které je veřejně dostupné pod [GNU Lesser General Public License](https://www.gnu.org/copyleft/ menší.html). LZMA je výchozí metoda komprese používaná soubory 7z.
+7z používá binární formát souboru pro ukládání komprimovaných archivů. Vývoj a implementace archivátoru 7-ZIP publikoval první výskyt souborového formátu 7z. Specifikace jeho formátu jsou dostupné jako formát prostého textu v podadresáři „Docs“ v úložišti kódu 7-ZIP, které je veřejně dostupné pod [GNU Lesser General Public License](https://www.gnu.org/copyleft/lesser.html). LZMA je výchozí metoda komprese používaná soubory 7z.
 
 ### Podpis souboru
 
