--- a/el/compression/7Z.el.md
+++ b/el/compression/7Z.el.md
@@ -35,7 +35,7 @@
 
 ## Προδιαγραφές μορφής αρχείου 7z
 
-Το 7z χρησιμοποιεί δυαδική μορφή αρχείου για την αποθήκευση των συμπιεσμένων αρχείων. Η ανάπτυξη και υλοποίηση του 7-ZIP archiver δημοσίευσε την πρώτη εμφάνιση της μορφής αρχείου 7z. Οι προδιαγραφές μορφής του είναι προσβάσιμες ως μορφή απλού κειμένου στον υποκατάλογο "Έγγραφα" στο αποθετήριο κώδικα του 7-ZIP, ο οποίος είναι δημόσια διαθέσιμος υπό την [GNU Lesser General Public License](https://www.gnu.org/copyleft/ μικρότερο.html). Το LZMA είναι η προεπιλεγμένη μέθοδος συμπίεσης που χρησιμοποιείται από αρχεία 7z.
+Το 7z χρησιμοποιεί δυαδική μορφή αρχείου για την αποθήκευση των συμπιεσμένων αρχείων. Η ανάπτυξη και υλοποίηση του 7-ZIP archiver δημοσίευσε την πρώτη εμφάνιση της μορφής αρχείου 7z. Οι προδιαγραφές μορφής του είναι προσβάσιμες ως μορφή απλού κειμένου στον υποκατάλογο "Έγγραφα" στο αποθετήριο κώδικα του 7-ZIP, ο οποίος είναι δημόσια διαθέσιμος υπό την [GNU Lesser General Public License](https://www.gnu.org/copyleft/lesser.html). Το LZMA είναι η προεπιλεγμένη μέθοδος συμπίεσης που χρησιμοποιείται από αρχεία 7z.
 
 ### Υπογραφή αρχείου
 
