--- a/es/compression/7Z.es.md
+++ b/es/compression/7Z.es.md
@@ -35,7 +35,7 @@
 
 ## Especificaciones del formato de archivo 7z
 
-7z usa formato de archivo binario para almacenar los archivos comprimidos. El desarrollo e implementación del archivador 7-ZIP publicó la primera aparición del formato de archivo 7z. Se puede acceder a sus especificaciones de formato como formato de texto sin formato en el subdirectorio "Docs" en el repositorio de código de 7-ZIP, que está disponible públicamente bajo la [Licencia pública general reducida de GNU](https://www.gnu.org/copyleft/ menor.html). LZMA es el método de compresión predeterminado que utilizan los archivos 7z.
+7z usa formato de archivo binario para almacenar los archivos comprimidos. El desarrollo e implementación del archivador 7-ZIP publicó la primera aparición del formato de archivo 7z. Se puede acceder a sus especificaciones de formato como formato de texto sin formato en el subdirectorio "Docs" en el repositorio de código de 7-ZIP, que está disponible públicamente bajo la [Licencia pública general reducida de GNU](https://www.gnu.org/copyleft/lesser.html). LZMA es el método de compresión predeterminado que utilizan los archivos 7z.
 
 ### Firma del archivo
 
