--- a/fr/compression/7Z.fr.md
+++ b/fr/compression/7Z.fr.md
@@ -35,7 +35,7 @@
 
 ## Spécifications du format de fichier 7z
 
-7z utilise le format de fichier binaire pour stocker les archives compressées. Le développement et la mise en œuvre de l'archiveur 7-ZIP ont publié la première apparition du format de fichier 7z. Ses spécifications de format sont accessibles au format texte brut sous le sous-répertoire "Docs" dans le référentiel de code de 7-ZIP qui est accessible au public sous la [Licence publique générale limitée GNU](https://www.gnu.org/copyleft/ moindre.html). LZMA est la méthode de compression par défaut utilisée par les fichiers 7z.
+7z utilise le format de fichier binaire pour stocker les archives compressées. Le développement et la mise en œuvre de l'archiveur 7-ZIP ont publié la première apparition du format de fichier 7z. Ses spécifications de format sont accessibles au format texte brut sous le sous-répertoire "Docs" dans le référentiel de code de 7-ZIP qui est accessible au public sous la [Licence publique générale limitée GNU](https://www.gnu.org/copyleft/lesser.html). LZMA est la méthode de compression par défaut utilisée par les fichiers 7z.
 
 ### Signature de fichier
 
