--- a/hi/compression/7Z.hi.md
+++ b/hi/compression/7Z.hi.md
@@ -35,7 +35,7 @@
 
 ## 7z फ़ाइल स्वरूप निर्दिष्टीकरण
 
-7z संपीड़ित अभिलेखागार को संग्रहीत करने के लिए बाइनरी फ़ाइल स्वरूप का उपयोग करता है। 7-ज़िप संग्रहकर्ता के विकास और कार्यान्वयन ने 7z फ़ाइल स्वरूप की पहली उपस्थिति प्रकाशित की। इसके प्रारूप विनिर्देश 7-ज़िप के कोड भंडार में "डॉक्स" उप-निर्देशिका के तहत सादे पाठ प्रारूप के रूप में उपलब्ध हैं जो [जीएनयू लेसर जनरल पब्लिक लाइसेंस](https://www.gnu.org/copyleft/) के तहत सार्वजनिक रूप से उपलब्ध है। कम.एचटीएमएल)। LZMA 7z फ़ाइलों द्वारा उपयोग की जाने वाली डिफ़ॉल्ट संपीड़न विधि है।
+7z संपीड़ित अभिलेखागार को संग्रहीत करने के लिए बाइनरी फ़ाइल स्वरूप का उपयोग करता है। 7-ज़िप संग्रहकर्ता के विकास और कार्यान्वयन ने 7z फ़ाइल स्वरूप की पहली उपस्थिति प्रकाशित की। इसके प्रारूप विनिर्देश 7-ज़िप के कोड भंडार में "डॉक्स" उप-निर्देशिका के तहत सादे पाठ प्रारूप के रूप में उपलब्ध हैं जो [जीएनयू लेसर जनरल पब्लिक लाइसेंस](https://www.gnu.org/copyleft/lesser.html) के तहत सार्वजनिक रूप से उपलब्ध है। कम. LZMA 7z फ़ाइलों द्वारा उपयोग की जाने वाली डिफ़ॉल्ट संपीड़न विधि है।
 
 ### फ़ाइल हस्ताक्षर
 
