--- a/it/compression/7Z.it.md
+++ b/it/compression/7Z.it.md
@@ -35,7 +35,7 @@
 
 ## Specifiche del formato file 7z
 
-7z utilizza il formato di file binario per archiviare gli archivi compressi. Lo sviluppo e l'implementazione dell'archiviatore 7-ZIP hanno pubblicato la prima apparizione del formato di file 7z. Le sue specifiche di formato sono accessibili come formato di testo normale nella sottodirectory "Docs" nel repository di codice di 7-ZIP che è pubblicamente disponibile sotto la [GNU Lesser General Public License](https://www.gnu.org/copyleft/ minore.html). LZMA è il metodo di compressione predefinito utilizzato dai file 7z.
+7z utilizza il formato di file binario per archiviare gli archivi compressi. Lo sviluppo e l'implementazione dell'archiviatore 7-ZIP hanno pubblicato la prima apparizione del formato di file 7z. Le sue specifiche di formato sono accessibili come formato di testo normale nella sottodirectory "Docs" nel repository di codice di 7-ZIP che è pubblicamente disponibile sotto la [GNU Lesser General Public License](https://www.gnu.org/copyleft/lesser.html). LZMA è il metodo di compressione predefinito utilizzato dai file 7z.
 
 ### Firma del file
 
