--- a/nl/compression/7Z.nl.md
+++ b/nl/compression/7Z.nl.md
@@ -35,7 +35,7 @@
 
 ## Specificaties 7z-bestandsindeling
 
-7z gebruikt een binair bestandsformaat om de gecomprimeerde archieven op te slaan. De ontwikkeling en implementatie van 7-ZIP archiver publiceerde de eerste verschijning van het 7z-bestandsformaat. De formaatspecificaties zijn toegankelijk als platte tekst in de submap "Docs" in de coderepository van 7-ZIP die openbaar beschikbaar is onder de [GNU Lesser General Public License](https://www.gnu.org/copyleft/ minder.html). LZMA is de standaardcompressiemethode die door 7z-bestanden wordt gebruikt.
+7z gebruikt een binair bestandsformaat om de gecomprimeerde archieven op te slaan. De ontwikkeling en implementatie van 7-ZIP archiver publiceerde de eerste verschijning van het 7z-bestandsformaat. De formaatspecificaties zijn toegankelijk als platte tekst in de submap "Docs" in de coderepository van 7-ZIP die openbaar beschikbaar is onder de [GNU Lesser General Public License](https://www.gnu.org/copyleft/lesser.html). LZMA is de standaardcompressiemethode die door 7z-bestanden wordt gebruikt.
 
 ### Bestandshandtekening
 
