--- a/pl/compression/7Z.pl.md
+++ b/pl/compression/7Z.pl.md
@@ -35,7 +35,7 @@
 
 ## Specyfikacje formatu plików 7z
 
-7z używa binarnego formatu plików do przechowywania skompresowanych archiwów. Opracowanie i wdrożenie archiwizatora 7-ZIP opublikowało pierwsze pojawienie się formatu plików 7z. Jego specyfikacje formatu są dostępne jako format zwykłego tekstu w podkatalogu „Docs” w repozytorium kodu 7-ZIP, które jest publicznie dostępne na licencji [GNU Lesser General Public License](https://www.gnu.org/copyleft/ mniejszy.html). LZMA to domyślna metoda kompresji używana przez pliki 7z.
+7z używa binarnego formatu plików do przechowywania skompresowanych archiwów. Opracowanie i wdrożenie archiwizatora 7-ZIP opublikowało pierwsze pojawienie się formatu plików 7z. Jego specyfikacje formatu są dostępne jako format zwykłego tekstu w podkatalogu „Docs” w repozytorium kodu 7-ZIP, które jest publicznie dostępne na licencji [GNU Lesser General Public License](https://www.gnu.org/copyleft/lesser.html). LZMA to domyślna metoda kompresji używana przez pliki 7z.
 
 ### Podpis pliku
 
