--- a/ru/compression/7Z.ru.md
+++ b/ru/compression/7Z.ru.md
@@ -35,7 +35,7 @@
 
 ## Спецификации формата файла 7z
 
-7z использует двоичный формат файла для хранения сжатых архивов. Разработка и внедрение архиватора 7-ZIP опубликовали первое появление формата файла 7z. Его спецификации формата доступны в виде простого текста в подкаталоге «Docs» в репозитории кода 7-ZIP, который общедоступен в соответствии с [Сокращенной общедоступной лицензией GNU](https://www.gnu.org/copyleft/ меньше.html). LZMA — это метод сжатия по умолчанию, используемый файлами 7z.
+7z использует двоичный формат файла для хранения сжатых архивов. Разработка и внедрение архиватора 7-ZIP опубликовали первое появление формата файла 7z. Его спецификации формата доступны в виде простого текста в подкаталоге «Docs» в репозитории кода 7-ZIP, который общедоступен в соответствии с [Сокращенной общедоступной лицензией GNU](https://www.gnu.org/copyleft/lesser.html). LZMA — это метод сжатия по умолчанию, используемый файлами 7z.
 
 ### Подпись файла
 
