--- a/tr/compression/7Z.tr.md
+++ b/tr/compression/7Z.tr.md
@@ -35,7 +35,7 @@
 
 ## 7z Dosya Biçimi Özellikleri
 
-7z, sıkıştırılmış arşivleri depolamak için ikili dosya biçimini kullanır. 7-ZIP arşivleyicinin geliştirilmesi ve uygulanması, 7z dosya formatının ilk görünümünü yayınladı. Biçim özelliklerine, [GNU Kısıtlı Genel Kamu Lisansı](https://www.gnu.org/copyleft/) altında halka açık olan 7-ZIP'in kod deposundaki "Docs" alt dizini altında düz metin biçiminde erişilebilir. lesser.html). LZMA, 7z dosyaları tarafından kullanılan varsayılan sıkıştırma yöntemidir.
+7z, sıkıştırılmış arşivleri depolamak için ikili dosya biçimini kullanır. 7-ZIP arşivleyicinin geliştirilmesi ve uygulanması, 7z dosya formatının ilk görünümünü yayınladı. Biçim özelliklerine, [GNU Kısıtlı Genel Kamu Lisansı](https://www.gnu.org/copyleft/lesser.html) altında halka açık olan 7-ZIP'in kod deposundaki "Docs" alt dizini altında düz metin biçiminde erişilebilir. LZMA, 7z dosyaları tarafından kullanılan varsayılan sıkıştırma yöntemidir.
 
 ### Dosya İmzası
 
