--- a/uk/compression/7Z.uk.md
+++ b/uk/compression/7Z.uk.md
@@ -35,7 +35,7 @@
 
 ## Специфікації формату файлу 7z
 
-7z використовує двійковий формат файлу для зберігання стиснених архівів. Розробка та впровадження архіватора 7-ZIP опублікувала першу появу формату файлів 7z. Його специфікації формату доступні у вигляді простого текстового формату в підкаталозі «Документи» у сховищі коду 7-ZIP, яке є загальнодоступним за [меншою загальною публічною ліцензією GNU](https://www.gnu.org/copyleft/ менший.html). LZMA — це метод стиснення за замовчуванням для файлів 7z.
+7z використовує двійковий формат файлу для зберігання стиснених архівів. Розробка та впровадження архіватора 7-ZIP опублікувала першу появу формату файлів 7z. Його специфікації формату доступні у вигляді простого текстового формату в підкаталозі «Документи» у сховищі коду 7-ZIP, яке є загальнодоступним за [меншою загальною публічною ліцензією GNU](https://www.gnu.org/copyleft/lesser.html). LZMA — це метод стиснення за замовчуванням для файлів 7z.
 
 ### Підпис файлу
 
