--- a/vi/compression/7Z.vi.md
+++ b/vi/compression/7Z.vi.md
@@ -35,7 +35,7 @@
 
 ## Thông số kỹ thuật định dạng tệp 7z
 
-7z sử dụng định dạng tệp nhị phân để lưu trữ các tệp nén. Việc phát triển và triển khai trình lưu trữ 7-ZIP đã công bố sự xuất hiện đầu tiên của định dạng tệp 7z. Thông số kỹ thuật định dạng của nó có thể truy cập dưới dạng định dạng văn bản thuần túy trong thư mục con "Tài liệu" trong kho lưu trữ mã của 7-ZIP, được cung cấp công khai theo [Giấy phép Công cộng Hạn chế GNU](https://www.gnu.org/copyleft/ ít hơn.html). LZMA là phương pháp nén mặc định được sử dụng bởi các tệp 7z.
+7z sử dụng định dạng tệp nhị phân để lưu trữ các tệp nén. Việc phát triển và triển khai trình lưu trữ 7-ZIP đã công bố sự xuất hiện đầu tiên của định dạng tệp 7z. Thông số kỹ thuật định dạng của nó có thể truy cập dưới dạng định dạng văn bản thuần túy trong thư mục con "Tài liệu" trong kho lưu trữ mã của 7-ZIP, được cung cấp công khai theo [Giấy phép Công cộng Hạn chế GNU](https://www.gnu.org/copyleft/lesser.html). LZMA là phương pháp nén mặc định được sử dụng bởi các tệp 7z.
 
 ### Chữ ký tệp
 
