--- a/de/compression/7Z.de.md
+++ b/de/compression/7Z.de.md
@@ -35,7 +35,7 @@
 
 ## 7z-Dateiformatspezifikationen
 
-7z verwendet das binäre Dateiformat, um die komprimierten Archive zu speichern. Die Entwicklung und Implementierung des 7-ZIP-Archivierers veröffentlichte das erste Erscheinen des 7z-Dateiformats. Seine Formatspezifikationen sind als reines Textformat im Unterverzeichnis „Docs“ im Code-Repository von 7-ZIP zugänglich, das unter der [GNU Lesser General Public License](https://www.gnu.org/copyleft/) öffentlich verfügbar ist. kleiner.html). LZMA ist die Standardkomprimierungsmethode, die von 7z-Dateien verwendet wird.
+7z verwendet das binäre Dateiformat, um die komprimierten Archive zu speichern. Die Entwicklung und Implementierung des 7-ZIP-Archivierers veröffentlichte das erste Erscheinen des 7z-Dateiformats. Seine Formatspezifikationen sind als reines Textformat im Unterverzeichnis „Docs“ im Code-Repository von 7-ZIP zugänglich, das unter der [GNU Lesser General Public License](https://www.gnu.org/copyleft/lesser.html) öffentlich verfügbar ist. LZMA ist die Standardkomprimierungsmethode, die von 7z-Dateien verwendet wird.
 
 ### Datei Signatur
 
