--- a/ko/compression/7Z.ko.md
+++ b/ko/compression/7Z.ko.md
@@ -35,7 +35,7 @@
 
 ## 7z 파일 형식 사양
 
-7z는 바이너리 파일 형식을 사용하여 압축된 아카이브를 저장합니다. 7-ZIP 아카이버의 개발 및 구현으로 7z 파일 형식이 처음으로 공개되었습니다. 형식 사양은 [GNU Lesser General Public License](https://www.gnu.org/copyleft/)에 따라 공개적으로 사용 가능한 7-ZIP 코드 저장소의 "Docs" 하위 디렉토리에서 일반 텍스트 형식으로 액세스할 수 있습니다. lesser.html). LZMA는 7z 파일에서 사용하는 기본 압축 방법입니다.
+7z는 바이너리 파일 형식을 사용하여 압축된 아카이브를 저장합니다. 7-ZIP 아카이버의 개발 및 구현으로 7z 파일 형식이 처음으로 공개되었습니다. 형식 사양은 [GNU Lesser General Public License](https://www.gnu.org/copyleft/lesser.html) 에 따라 공개적으로 사용 가능한 7-ZIP 코드 저장소의 "Docs" 하위 디렉토리에서 일반 텍스트 형식으로 액세스할 수 있습니다. LZMA는 7z 파일에서 사용하는 기본 압축 방법입니다.
 
 ### 파일 서명
 
