--- a/ar/video/h264.ar.md
+++ b/ar/video/h264.ar.md
@@ -66,5 +66,5 @@
 ## مراجع
 
 * [BlackBox](https://www.blackbox.co.uk/gb-gb/page/38313/Resources/Technical-Resources/Black-Box-Explains/Multimedia/What-is-H264-video-encoding)
-* [StreamingMedia](https://www.streamingmedia.com/Articles/ReadArticle.aspx؟ArticleID=74735)
+* [StreamingMedia](https://www.streamingmedia.com/Articles/ReadArticle.aspx?ArticleID=74735)
 
